Changelog for Alias (v1.1.0-SNAPSHOT)

2012-07-29 00:23:15 +0100    Allow usage from console (James Richardson)
2012-07-29 00:20:35 +0100    added Metrics - changed from LoginEvent to PreLoginEvent (James Richardson)
2012-07-28 23:17:18 +0100    add MetricsListener (James Richardson)
2012-07-07 05:20:58 +0100    fix NPE when initalising handler before plugin is ready (James Richardson)
2012-07-07 04:38:58 +0100    remove duplicates from header (James Richardson)
2012-07-07 04:33:58 +0100    preserve order (James Richardson)
2012-07-07 04:33:27 +0100    remove duplicates from player name list (James Richardson)
2012-07-07 04:26:24 +0100    remove debugging (James Richardson)
2012-07-07 04:24:31 +0100    fix NPE (James Richardson)
2012-07-07 04:21:44 +0100    add updater defaults and change date format (James Richardson)
2012-07-07 04:17:16 +0100    fix registering permission to plugin root instead of command root (James Richardson)
2012-07-07 04:16:47 +0100    clean up (James Richardson)
2012-07-07 04:16:21 +0100    added delete command (James Richardson)
2012-07-07 03:57:44 +0100    various bug fixes (James Richardson)
2012-07-07 03:19:23 +0100    Missing generic (James Richardson)
2012-07-07 03:19:02 +0100    Missing import (James Richardson)
2012-07-07 03:18:37 +0100    update CheckCommand (James Richardson)
2012-07-07 02:03:24 +0100    move logic out of listener and into handler (James Richardson)
2012-07-07 01:50:24 +0100    setup persistence (James Richardson)
2012-07-07 00:52:19 +0100    dynamically update plugin description (James Richardson)
2012-07-07 00:50:48 +0100    added localisation (James Richardson)
2012-07-07 00:46:55 +0100    updated plugin (James Richardson)

v1.0.3
2012-03-03 14:52:53 +0000    build against 1-1-R6 (James Richardson)

v1.0.2
2012-02-10 21:24:52 +0000    updated change log (James Richardson)
2012-02-10 21:19:54 +0000    log when who uses the CheckCommand and for what. (James Richardson)